<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/introduction"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:clickable="false"
        android:layout_below="@id/selectLanguage"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <ImageButton
        android:id="@+id/addText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/text"
        android:src="@drawable/ic_outlin_add_text"
        android:layout_below="@id/selectLanguage"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_above="@id/button">

        <TextView
            android:id="@+id/savedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_words"
            android:layout_margin="10dp"/>

    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/linearLayout">

        <net.gotev.speech.ui.SpeechProgressView
            android:id="@+id/progress"
            android:layout_width="120dp"
            android:layout_height="150dp"/>

    </LinearLayout>

    <ImageButton
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_mic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_speak"
        android:layout_below="@id/button"
        android:gravity="center" />

    <CheckBox
        android:id="@+id/startServiceChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Service"
        android:layout_above="@id/textToSpeech"
        android:layout_alignParentStart="true"/>

    <ImageButton
        android:id="@+id/selectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_language_24"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say_something"
        android:id="@+id/speak"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textToSpeech"
        android:hint="@string/tts_hint"
        android:layout_alignTop="@+id/speak"
        android:visibility="invisible"
        android:layout_toLeftOf="@+id/speak"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>